# california-housing-mlops

./: .dockerignore  .gitignore  CODE_STYLE.md  COMMANDS.md  Dockerfile  README.md  ROADMAP.md  pyproject.toml  requirements-serve.txt  requirements.txt
.github/workflows/: ci.yaml
common/: data_utils.py  eval_utils.py  logger.py  plot_utils.py  reproducibility.py
configs/: data_config.yaml  deployment_config.yaml  logging_config.yaml  model_config.yaml  training_config.yaml  tuning_config.yaml
experiments/: mlflow.db
lwd/tests/: test_main.py
pipeline/: __init__.py  train.py  tune.py
src/data/: loader.py  preprocessor.py  splitter.py
src/deployment/: app.py  model_server.py  schemas.py
src/evaluation/: comparison.py  diagnostics.py  metrics.py
src/features/: build_features.py  feature_selector.py
src/models/: baseline.py  gradient_boosting.py  model_factory.py  regularized.py  tree_based.py
src/tuning/: optuna_tuner.py
src/utils/: helpers.py
tests/: test_comparison.py  test_data_loader.py  test_deployment.py  test_diagnostics.py  test_feature_selector.py  test_helper.py  test_metrics.py  test_model_factory.py  test_preprocessor.py
