[build-system]
requires = ["setuptools>=65.0.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "california-housing-mlops"
version = "1.0.0"
description = "California Housing price MLOPS pipeline"
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
