[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "california-housing-mlops"
version = "1.0.0"
description = "California Housing price MLOps pipeline"
requires-python = ">=3.10"
dependencies = [
    "mlflow>=3.11.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "common*"]

# ── Ruff — linter + formatter (replaces flake8 + black + isort) ──────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E203"]

[tool.ruff.lint.isort]
known-first-party = ["src", "common"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Pyright — type checker (replaces mypy) ───────────────────────────────────
[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
include = ["src", "common"]
exclude = ["tests", "notebooks", "**/__pycache__"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
asyncio_mode = "auto"

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "notebooks/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true
